0.25

[ BUG FIXES ]

- The docs for the from_object constructor said that by default, new
objects were in the UTC time zone, but in reality the default was the
floating time zone.  The docs were changed to match the code.  Ticket
9278 on rt.cpan.org.


0.24    2004-12-10 (the "have I mentioned I hate leap seconds" release)

[ BUG FIXES ]

- Fixed even more bugs related to leap seconds and time zones.
Reported by Eugene van der Pijll.

[ KNOWN BUGS ]

- Offsets with a seconds portion (like "+00:00:30") act strangely near
leap seconds.  Reported by Eugene van der Pijll.  This will be fixed
in a future release.


0.23    2004-12-09 (the "oh how I hate leap seconds" release)

[ ENHANCEMENTS ]

- Added a number of convenience "set" methods: set_year, set_month,
set_day, set_hour, set_minute, set_second, set_nanosecond, and
set_locale.  Suggested by Michael Schwern.

- Added christian_era and year_with_christian_era methods.

- Clarified that from_epoch(), today(), and now() all return objects
in the UTC time zone.  Suggested by Sagar Shah and others.

- Added formatter parameter to constructor, which allows per-object
stringification.  Based on a patch from Daisuke Maki.

[ BUG FIXES ]

- Trying to serialize DateTime::Infinite objects with Storable blew
up.  Patch by Daisuke Maki.

- Require Test::More 0.34+, since I use a function introduced in that
version in the tests.  Suggested by Jean Forget.

- Fix a bug in strftime() which could cause weirdness with
pathological specifiers like "%%{day_name}%n".  Reported by Jean
Forget.

- Fixed a number of bugs related to leap seconds and time zones.
Reported by Eugene van der Pijll.


0.22    2004-07-23

[ *** BACKWARDS INCOMPATIBILITIES *** ]

- The leap second table we were using mistakenly included a leap
second on December 31, 1971.  This will break all versions of the
DateTime::Format::Epoch::TAI64 module up to and including version
0.06.  Most users of DateTime.pm will not be affected.  Patch by
Joshua Hoblitt.

